# ESATAN-Parser

./: .gitignore  1_FCU_HA_v03.erg  1_FCU_HA_v03.xlsx  1_FCU_HA_v03_POPRAWNY.erg  1_TCS_FPM_TVAC.erg  1_TCS_FPM_TVAC.xlsx  2_FCU_PSU_v03.erg  2_FCU_PSU_v03.xlsx  2_FGS_TA_Rv04.erg  8_EROS_DU_v01.erg  Config_test.py  GUI_PARSER.py  PARSER copy.py  PARSER.py  PARSER_NOWY_GUI.py  Parser_runner.py  Parser_runner_CLI.py  README.md  TEST.bdf  TEST.erg  TekstTest.py  Test.py  TestPYQT.py  TextTest.py  configDefault.ini  configLast.ini  hello_world.bat  pyproject.toml  tempCodeRunnerFile.py
1_FCU_HA_v03/: 1_FCU_HA_v03.bdf  1_FCU_HA_v03.erg  1_FCU_HA_v03.xlsx
1_TCS_FPM_TVAC/: 1_TCS_FPM_TVAC.erg  1_TCS_FPM_TVAC.xlsx
2_FCU_PSU_v03/: 2_FCU_PSU_v03.erg  2_FCU_PSU_v03.xlsx
2_FGS_TA_Rv04/: 2_FGS_TA_Rv04.erg  2_FGS_TA_Rv04.xlsx
Esatan_case_folder/01_GMM/: Test_subj_1.bat  Test_subj_1.erg  Test_subj_1_dobry.bat
Esatan_case_folder/01_GMM/02_SUBMODELS/: 1_FCU_HA_v03.erg  1_TCS_FPM_TVAC.erg
Models_folder/1_FCU_HA_v03/: 1_FCU_HA_v03.erg
Models_folder/1_TCS_FPM_TVAC/: 1_TCS_FPM_TVAC.bdf  1_TCS_FPM_TVAC.xlsx
Models_folder/2_FCU_PSU_v03/: 2_FCU_PSU_v03.bdf  2_FCU_PSU_v03.erg  2_FCU_PSU_v03.xlsx  2_FCU_PSU_v03_POPRAWNY.erg
Models_folder/2_FGS_TA_Rv04/: 2_FGS_TA_Rv04.bdf
Models_folder/8_EROS_DU_v01/: 8_EROS_DU_v01.bdf  8_EROS_DU_v01.xlsx
assets/: PARSER-FEMAP.docx
output/: 2_FCU_PSU_v05.erg
scripts/: run_parser.py
src/: GUI.py  GUI_PARSER.py  PARSER.py  geometry.py
