[project]
name = "esatan-parser"
version = "0.1.0"
requires-python = ">=3.12"

# główne zależności
dependencies = [
    "PyQt5==5.15.10",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.13.0",
    "pandas",
    "numpy",
    "openpyxl>=3.1.5",
    "pyinstaller>=6.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.required-environments]
win_amd64 = true

[tool.hatch.build.targets.wheel]
packages = ["src/esatan_parser"]
